FrontEnd Org interface. FileServer improvements. Dynamic app logo, Ubuntu Font

--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -11,11 +11,12 @@
 
 <body>
     <app-root></app-root>
-    <div class="preloader">
+    <!-- TODO Preload dinamik me logo nga Databaza -->
+    <!-- <div class="preloader">
         <div class="preloader-progress">
             <div class="preloader-progress-bar"></div>
         </div>
-    </div>
+    </div> -->
 </body>
 
 </html>
